SLING-5862 - Remove maven-antrun-plugin executions related to memory checks
With SLING-5860 the checks are no longer required.

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1753187 13f79535-47bb-0310-9956-ffa450edef68