@@ -163,24 +163,6 @@
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>check-memory-task</id>
-                        <phase>process-resources</phase>
-                        <configuration>
-                            <target>
-                                <echo>
-**************** WARNING (SLING-443/SLING-1782) ******************************
-On most platforms, you'll get OutOfMemoryErrors when building unless you set
-on 32bit platforms: MAVEN_OPTS="-Xmx256M -XX:MaxPermSize=256M", see SLING-443
-on 64bit platforms: MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M", see SLING-1782
-******************************************************************************
-                                </echo>
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                    <execution>
                         <id>set-bundle-required-execution-environment</id>
                         <goals>
                             <goal>run</goal>
